<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">monitor</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- 登陆相关 -->
    <string name="login">登陆</string>
    <string name="login_name">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_success">登陆成功</string>
    <string name="login_np_error">用户名or密码错误</string>
    <string name="login_net_error">网络错误</string>
    
    

    <!-- 注册相关 -->
    <string name="register">注册</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register_name">用户名:</string>
    <string name="register_nickname">昵称:</string>
    <string name="register_password">密码:</string>
    <string name="register_password2">确认密码:</string>
    <string name="register_gender">性别:</string>
    <string name="register_gender_m">男</string>
    <string name="register_gender_f">女</string>
    <string name="register_phone">手机号码:</string>
    <string name="register_email">邮箱:</string>
    <string name="register_comfirm">确认</string>
    <string name="register_cancle">返回</string>
    <string name="title_activity_car">CarActivity</string>

    <!-- car信息相关 -->
    <string name="car_comfirm">确认</string>
	<string name="car_refresh">刷新</string>
	
    <!-- 监测信息相关 -->
    <string name="m_time">时间:</string>
    <string name="m_temperature">温度:</string>
    <string name="m_humidity">湿度:</string>
    <string name="m_carbon_dioxide">二氧化碳:</string>
    <string name="m_oxygen">氧气:</string>
    <string name="m_nitrogen">氮气:</string>
    <string name="m_ethylene">乙烯:</string>
    <string name="m_ammonia">氨气:</string>
    <string name="m_sulfur_dioxide">二氧化硫:</string>
    <string name="btn_location">位置信息</string>
    <string name="title_activity_info">InfoActivity</string>

    <!-- 字体颜色 -->
    <string name="blue_green">0x006666</string>
    
     <string name="xml_red">#FF0000</string>
</resources>
